Revision history for Perl extension Params::CallbackRequest.

1.15

1.14  2006-03-02T20:07:28
      - Removed an unnecessary eval block around the loading of Class::ISA
        and Attribute::Handlers that would prevent the failure of either of
        those modules to load to propagate.
      - Fixed typo in the Synopsis spotted by Scott Lanning.
      - Added support for mod_perl2, as well as mod_perl 1 and mod_perl 1.99.

1.13  2004-04-20T18:29:37
      - Apache 2 compatability added thanks to Fred Moyer.

1.12  2004-03-15T15:27:54
      - No longer using a Params::Validate callback to transform a value,
        since that's not a supported feature of Params::Validate and it led
        to problems on some platforms.

1.11  Wed Oct  8 19:27:32 2003
      - Fixed execution of pre and post callbacks so that they execute in the
        order in which they're declared. Thanks to Perl 5.8.1 for rubbing my
        nose in this one!

1.10  Mon Sep  8 21:15:42 2003
      - Code moved over from MasonX::ApacheHandler::WithCallbacks, which is
        deprecated. Differences from that class are as follows.
      - Code from MasonX::ApacheHandler::WithCallbacks has been migrated to
        Params::CallbackRequest.
      - Code from MasonX::CallbackHandler has been migrated to
        Params::Callback.
      - MasonX::CallbackTester has been removed, since it isn't necessary
        in a non-mod_perl environment.
      - Created Params::CallbackRequest::Exceptions to create all of the exception
        classes used by Params::CallbackRequest. These no longer inherit from
        HTML::Mason::Exception, of course, but from Exception::Class::Base.
      - Renamed the "exec_null_cb_values" parameter to "ignore_nulls". It is
        now false by default, and you pass a true value to enable it. Thus the
        semantics are the opposite of "exec_null_cb_values", but the result is
        the same.
      - Renamed the "cb_exception_handler" to "exception_handler", since it's